--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Obtener el repositorio
+      # Obtener el repositorio
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Copiar todo el proyecto a la EC2
+      # Copiar todo el proyecto a la EC2
       - name: Copy entire project to EC2
         uses: appleboy/scp-action@v1
         with:
@@ -25,7 +25,7 @@ jobs:
           target: "/home/${{ secrets.EC2_USER }}/app"
           rm: true
 
-      # 3️⃣ Crear .env en la raíz y desplegar con Docker Compose
+      # Crear .env en la raíz y desplegar con Docker Compose
       - name: Deploy on EC2 with Docker Compose
         uses: appleboy/ssh-action@v1
         with:
