--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,9 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "winston": "^3.19.0",
+    "winston-loki": "^6.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
