--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ JWT_SECRET=tu_secreto_jwt_super_seguro_aqui
 DATABASE_URL=postgresql://usuario:password@database:5432/nombre_db
 
 # CONFIGURACIÓN DE FRONTEND
-VITE_REACT_APP_API_URL=http://localhost:3000/api
+VITE_REACT_APP_API_URL=http://<IP>:3000/api
